refactor(api): improve readability and maintainability